--- a/ClasseObjetos/Heranca/Heranca.csproj
+++ b/ClasseObjetos/Heranca/Heranca.csproj
@@ -44,7 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bicicleta.cs" />
+    <Compile Include="Caminhonete.cs" />
     <Compile Include="Carro.cs" />
+    <Compile Include="Classes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Veiculo.cs" />
